--- a/staplesgotclass/Base.lproj/Main.storyboard
+++ b/staplesgotclass/Base.lproj/Main.storyboard
@@ -2453,13 +2453,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="Auy-qp-Y0w">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="61"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Staples vs Opponent" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Wc-nP-CZy">
-                                    <rect key="frame" x="8" y="0.0" width="359" height="61"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Staples vs Opponent " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Wc-nP-CZy">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="61" id="VDq-mk-EPP"/>
+                                        <constraint firstAttribute="height" constant="78" id="VDq-mk-EPP"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="30"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2468,13 +2468,13 @@
                             </subviews>
                             <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="5Wc-nP-CZy" secondAttribute="trailing" constant="8" id="9Q8-26-ZS6"/>
-                                <constraint firstItem="5Wc-nP-CZy" firstAttribute="leading" secondItem="Auy-qp-Y0w" secondAttribute="leading" constant="8" id="9uQ-r4-eqH"/>
+                                <constraint firstAttribute="trailing" secondItem="5Wc-nP-CZy" secondAttribute="trailing" id="9Q8-26-ZS6"/>
+                                <constraint firstItem="5Wc-nP-CZy" firstAttribute="leading" secondItem="Auy-qp-Y0w" secondAttribute="leading" id="9uQ-r4-eqH"/>
                                 <constraint firstItem="5Wc-nP-CZy" firstAttribute="top" secondItem="Auy-qp-Y0w" secondAttribute="top" id="xoW-Md-Dtg"/>
                             </constraints>
                         </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="uff-VV-LVR">
-                            <rect key="frame" x="0.0" y="192.5" width="375" height="44"/>
+                            <rect key="frame" x="0.0" y="209.5" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="eqj-Vj-Qn9">
@@ -2496,16 +2496,16 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="sportsInfoCell" rowHeight="58" id="rKk-wV-mz6" customClass="SportsInfoCell" customModule="staplesgotclass" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="116.5" width="375" height="58"/>
+                                <rect key="frame" x="0.0" y="133.5" width="375" height="58"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rKk-wV-mz6" id="Rtn-1b-Pyk">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="57.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fairfield High School" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KZb-BT-UHn">
-                                            <rect key="frame" x="100" y="0.0" width="267" height="58"/>
+                                            <rect key="frame" x="100" y="0.0" width="254" height="58"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="267" id="DuP-cT-dqq"/>
+                                                <constraint firstAttribute="width" constant="254" id="DuP-cT-dqq"/>
                                                 <constraint firstAttribute="height" constant="43" id="v7d-W1-84p"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
@@ -2538,7 +2538,7 @@
                                         <constraint firstItem="HOe-Jz-41y" firstAttribute="top" secondItem="Rtn-1b-Pyk" secondAttribute="top" id="HiZ-Lf-DHY"/>
                                         <constraint firstAttribute="bottom" secondItem="KZb-BT-UHn" secondAttribute="bottom" id="NYe-M5-zz1"/>
                                         <constraint firstItem="KZb-BT-UHn" firstAttribute="top" secondItem="Rtn-1b-Pyk" secondAttribute="top" id="SZ7-w7-7J2"/>
-                                        <constraint firstAttribute="trailing" secondItem="KZb-BT-UHn" secondAttribute="trailing" constant="8" id="TgO-ND-ieY"/>
+                                        <constraint firstAttribute="trailing" secondItem="KZb-BT-UHn" secondAttribute="trailing" constant="21" id="TgO-ND-ieY"/>
                                         <constraint firstItem="HOe-Jz-41y" firstAttribute="top" secondItem="Rtn-1b-Pyk" secondAttribute="top" id="k6I-DM-POI"/>
                                         <constraint firstItem="HOe-Jz-41y" firstAttribute="leading" secondItem="Rtn-1b-Pyk" secondAttribute="leading" constant="20" id="kC8-ZC-oUj"/>
                                         <constraint firstAttribute="bottom" secondItem="HOe-Jz-41y" secondAttribute="bottom" id="xnu-xG-6Vz"/>
