--- a/staplesgotclass/Base.lproj/Main.storyboard
+++ b/staplesgotclass/Base.lproj/Main.storyboard
@@ -1784,10 +1784,51 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection headerTitle="Color Selector" id="RYf-sZ-Zqi">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="97" id="PdQ-gu-sje">
+                                        <rect key="frame" x="0.0" y="464.5" width="375" height="97"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PdQ-gu-sje" id="dYa-Oz-9B1">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="96.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bnE-zV-wgH" customClass="ColorTable" customModule="staplesgotclass" customModuleProvider="target">
+                                                    <rect key="frame" x="8" y="0.0" width="359" height="78"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wsA-7K-H6r">
+                                                        <size key="itemSize" width="61" height="59"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                    <cells>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="colorCell" id="riq-y7-p55">
+                                                            <rect key="frame" x="0.0" y="9.5" width="61" height="59"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                                <rect key="frame" x="0.0" y="0.0" width="61" height="59"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                            </view>
+                                                            <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </collectionViewCell>
+                                                    </cells>
+                                                </collectionView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="bnE-zV-wgH" firstAttribute="top" secondItem="dYa-Oz-9B1" secondAttribute="top" id="S1E-19-nWO"/>
+                                                <constraint firstItem="bnE-zV-wgH" firstAttribute="leading" secondItem="dYa-Oz-9B1" secondAttribute="leading" constant="8" id="UMR-9w-hwX"/>
+                                                <constraint firstAttribute="bottom" secondItem="bnE-zV-wgH" secondAttribute="bottom" constant="18.5" id="WkJ-h8-Rxq"/>
+                                                <constraint firstAttribute="trailing" secondItem="bnE-zV-wgH" secondAttribute="trailing" constant="8" id="fIk-8a-zRO"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                             <tableViewSection headerTitle="Quarters" id="Gqs-aJ-vQB">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="160" id="eL5-jo-teK">
-                                        <rect key="frame" x="0.0" y="464.5" width="375" height="160"/>
+                                        <rect key="frame" x="0.0" y="617.5" width="375" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eL5-jo-teK" id="qpc-RE-MhG">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
@@ -1838,6 +1879,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="classTextField" destination="YLW-oN-NOJ" id="DXM-4t-6Q2"/>
+                        <outlet property="collectionView" destination="bnE-zV-wgH" id="mQC-nR-TST"/>
                         <outlet property="periodPicker" destination="cSr-yJ-1fQ" id="44d-eL-icc"/>
                         <outlet property="quarterTable" destination="OQD-Xt-yMi" id="HPY-Ob-5vV"/>
                         <outlet property="saveButton" destination="Hjw-Aj-h5A" id="Jf3-7c-3yZ"/>
@@ -1846,7 +1888,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sAM-Lx-fdu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6428" y="509"/>
+            <point key="canvasLocation" x="6428" y="508.69565217391306"/>
         </scene>
         <!--ClassmatesVC-->
         <scene sceneID="2OK-p9-3iA">
